fix: update profile image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="/images/profie img.png" alt="My profile picture" /></td>
+        <td><img src="images/profie img.png" alt="My profile picture" /></td>
         <td>
           <h1>John Patrick</h1>
           <p>
